# gearbox

./: .gitignore  .goreleaser.yml  README.md  admin_bridge.go  admin_root_urs.go  admin_ui.go  alias.go  api.go  assets.go  base_dir.go  basedir.go  box.go  candidate.go  config.go  configuration.go  const.go  dotted_version.go  error_log.go  framework.go  gear.go  gearbox.go  gearbox.json  global_options.go  go.mod  go.sum  host.go  host_api.go  host_api_basedir.go  host_api_links.go  host_api_project_routes.go  host_api_projects.go  host_api_stacks.go  hostapi.go  identity.go  json_version.go  keyfile.pub  main.go  options.go  options.json  parse_php.go  (+21 more)
.stashes/: stash1.diff  stash2.diff  stash3.diff  stash4.diff  stash5.diff  stash6.diff
_save/: dl.go  hb.go  net_interfaces.go  options.go  parse_go.go  parse_php.go  test.go  test2.go
admin/: README.md  api.json  babel.config.js  gears.json  index.html  package-lock.json  package.json  vue.config.js
api/: Gearbox.paw  api.go  const.go  echo.go  func.go  funcs.go  handler.go  interface.go  list_item_response.go  main.go  meta.go  projects.go  related.go  request_context.go  response.go  route.go  (+3 more)
appdistsrc/oncrpc-ms-code-r22-trunk/: 1.14  AUTHORS  Makefile.am  bootstrap  configure.ac  makebc.bat  oncrpc.iwz  readme  readme.txt
appdistsrc/oncrpc-ms-code-r22-trunk/doc/: contents.htm  copyrght.htm  download.htm  faq.htm  history.htm  new.htm  oncrpc.htm  overview.htm  usage.htm
appdistsrc/oncrpc-ms-code-r22-trunk/librpc/: Makefile.am  auth_uni.c  authunix.c  bindresv.c  clnt_gen.c  clnt_per.c  clnt_tcp.c  clnt_udp.c  get_myad.c  getrpcen.c  getrpcpo.c  gettimeofday.h  makefile.bc  nt.c  oncrpc.rc  oncrpcbc.def  pmap_cln.c  pmap_get.c  pmap_gma.c  pmap_pr.c  pmap_pro.c  pmap_rmt.c  portmap.c  rpc_comm.c  rpc_prot.c  svc.c  svc_udp.c  xdr_floa.c  xdr_rec.c
appdistsrc/oncrpc-ms-code-r22-trunk/rpc/: auth.h  clnt.h  rpc.h  svc.h
appdistsrc/oncrpc-ms-code-r22-trunk/rpcgen/: makefile.bc  rpc_clnt.c  rpc_cout.c  rpc_hout.c  rpc_main.c  rpc_pars.c  rpc_pars.h  rpc_scan.c  rpc_svco.c  rpc_util.c  rpc_util.h
appdistsrc/oncrpc-ms-code-r22-trunk/rpcinfo/: getopt.c  makefile.bc  rpcinfo.c
appdistsrc/oncrpc-ms-code-r22-trunk/service/: inst_pm.c  install.bat  makefile.bc  portmap.c  portmap.rc  portmapd.def  portmapd.rc  service.c  servreg.c  servreg.def  servreg.h  servregi.c  servregi.h  servregids.h
appdistsrc/oncrpc-ms-code-r22-trunk/test/: count.c  do_cou.c  makefile.bc
(+877 files in other folders)
