## Process this file with automake to produce Makefile.in

#SUBDIRS = librpc rpcgen service rpcinfo test
SUBDIRS = librpc
DIST_SUBDIRS = $(SUBDIRS)

nobase_include_HEADERS = \
    rpc/auth.h \
    rpc/auth_unix.h \
    rpc/bcopy.h \
    rpc/clnt.h \
    rpc/netdb.h \
    rpc/pmap_clnt.h \
    rpc/pmap_prot.h \
    rpc/pmap_rmt.h \
    rpc/rpc.h \
    rpc/rpc_msg.h \
    rpc/svc_auth.h \
    rpc/svc.h \
    rpc/types.h \
    rpc/xdr.h
